daemon mode for linux

--- a/.config.ini
+++ b/.config.ini
@@ -7,3 +7,9 @@ Port = 5555
 
 token = 499992190:AAG53DSDFDFssVfSDFSDFSDFWRWHHH
 chat_id = -1034534534539990
+
+[DAEMON]
+
+app = app_name
+pid = /where/your/pid/file.pid
+chdir = /app/working/directory
